Fix search bar location and Github gist alignment

--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -179,9 +179,8 @@ display: inline;
 }
 
 #dark {
-   display: inline;
-   height: 28px;
-   padding: 0px 0px;
+   display: inline-block;
+   height: 70px;
 }
 
 #dark #search {
