--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -141,7 +141,7 @@ figure.code{
 			pre{
 				font: 0.9em $font-mono;
 				line-height: 1.5;
-        float: left;
+        text-align: left;
 			}
 		}
 		.gist-meta{
